--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -2,40 +2,108 @@
   width: 100%;
   height: 100vh;
   background: var(--black1);
-  padding: 2rem;
+  padding: 1rem;
+  transition: 1s;
+}
+
+.home.active{
+  padding: 0;
+  background: var(--purple2);
 }
 
 .homeCtn{
   width: 100%;
   height: 100%;
+  padding: 1rem;
   border: .5rem solid var(--green);
-  color: var(--green);
   border-radius: 1rem;
-  padding: 2rem;
+  scroll-behavior: smooth;
+  background: rgba(0, 0, 0, .3);
+  color: var(--green);
+  box-shadow: 0 0 5px var(--green), inset 0 0 5px var(--green);
+  backdrop-filter: blur(4px);
+  transition: .5s;
 }
 
-.text p{
-  max-width: 100%;
-  word-wrap: break-word;
-  font-size: 2em;
-  margin-bottom: 2rem;
+.home.active .homeCtn{
+  padding: 0;
+  border: 0;
+  border-radius: 0;
+  box-shadow: none;
+  background: var(--purple2);
+  color: var(--white);
+  backdrop-filter: none;
+  display: flex;
 }
 
-.text .blink{
-  animation: blink .5s infinite step-end alternate;
+.homeCtn::-webkit-scrollbar{
+  display: none;
 }
 
-@keyframes blink {
-  50%{
-    color: transparent;
-  }
+.mainBx{
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+}
+
+.navRight{
+  position: relative;
+  right: 0;
+  width: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+  overflow: hidden;
+}
+
+ion-icon.react{
+  color: var(--ligthblue3);
+}
+
+ion-icon.css{
+  color: var(--blue1);
+}
+
+ion-icon.nodejs{
+  color: var(--green2);
+}
+
+ion-icon.binder{
+  color: var(--orange1);
+}
+
+ion-icon.json{
+  color: var(--yellow);
+}
+
+ion-icon.html{
+  color: var(--orange2);
 }
 
 @media only screen and (min-width:450px) {
   
-  .text p{
-    font-size: 2.5em;
-    margin-bottom: 3.5rem;
+  .home{
+    padding: 2rem;
+  }
+
+  .home.active{
+    padding-top: 0;
+  }
+
+  .homeCtn{
+    padding: 2rem;
+  }
+
+  .mainBx{
+    width: calc(100% - 200px);
+  }
+
+  .navRight{
+    width: 200px;
+    padding: 1.5rem 1rem;
   }
 
 }
