--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,4 +1,5 @@
 .home{
+  position: relative;
   width: 100%;
   height: 100vh;
   background: var(--black1);
@@ -11,7 +12,32 @@
   background: var(--purple2);
 }
 
+.home.active .navTop{
+  position: fixed;
+  width: 100%;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background: var(--purple2);
+  color: var(--white);
+  z-index: 100;
+}
+
+.home.active .navTop p:nth-child(2){
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  cursor: pointer;
+}
+
+.home.active .navTop ion-icon{
+  font-size: 1.5em;
+}
+
 .homeCtn{
+  position: relative;
   width: 100%;
   height: 100%;
   padding: 1rem;
@@ -26,6 +52,8 @@
 }
 
 .home.active .homeCtn{
+  top: 35px;
+  height: calc(100% - 35px);
   padding: 0;
   border: 0;
   border-radius: 0;
@@ -34,6 +62,7 @@
   color: var(--white);
   backdrop-filter: none;
   display: flex;
+  flex-direction: column;
 }
 
 .homeCtn::-webkit-scrollbar{
@@ -46,8 +75,12 @@
   min-height: 100vh;
 }
 
+.home.active .mainBx{
+  min-height: calc(100vh - 35px);
+}
+
 .navRight{
-  position: relative;
+  position: fixed;
   right: 0;
   width: 0;
   height: 100%;
@@ -56,7 +89,16 @@
   justify-content: flex-start;
   align-items: center;
   gap: 10px;
+  background: var(--purple2);
+  z-index: 10;
   overflow: hidden;
+  transition: .5s;
+}
+
+.navRight.active{
+  width: 100%;
+  padding: 1rem;
+  padding-right: 10rem;
 }
 
 ion-icon.react{
@@ -89,6 +131,10 @@ ion-icon.html{
     padding: 2rem;
   }
 
+  .home.active .navTop p:nth-child(2){
+    display: none;
+  }
+
   .home.active{
     padding-top: 0;
   }
@@ -102,6 +148,11 @@ ion-icon.html{
   }
 
   .navRight{
+    width: 200px;
+    padding: 1.5rem 1rem;
+  }
+
+  .navRight.active{
     width: 200px;
     padding: 1.5rem 1rem;
   }
