--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
 body{
   max-width: 100vw;
   min-height: 100vh;
+  scroll-behavior: smooth;
 }
 
 #root {
@@ -30,11 +31,15 @@ body{
   --black2: #333;
   --green: #12d211;
   --green2: #83cd29;
+  --green3: #6bbf91;
   --red: #ee122c;
   --yellow: #f9ca3f;
+  --yellow2: #ffc200;
   --orange1: #ff9800;
   --orange2: #da4817;
   --purple1: #262335;
   --purple2: #241b2f;
   --purple3: #852468;
+  --purple4: #393648;
+  --purple5: #db32a8;
 }
